# microservicio-nova

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  log.md  n8n_chat_histories_rows.csv  pyproject.toml  requirements.txt  test_ws_manual.py  verify_phoenix.py
contexto de flowify/docs/: ARQUITECTURA_ACTUAL.md  CHANGELOG.md  ESTADO_PROYECTO.md  README.md  SUSCRIPCIONES.md  UI_CONVERSACIONES.md  nova.md
contexto de flowify/docs/archive/: ANALISIS_DOCUMENTACION_VS_CODIGO.md  CONECTAR_SUPABASE.md  ESTADO_ACTUAL.md  FAVORITOS_PAPELERA_IMPLEMENTATION.md  IMPLEMENTACION CHATWOOT+EVOLUTION.md  INBOX_SIDEBAR_ANALYSIS.md  INVESTIGACION_DOCUMENTACION_COMPLETA.md  (+7 more)
docs/: DEPLOYMENT_DOKPLOY.md  DEPLOYMENT_EASYPANEL.md  FLOWIFY_INTEGRATION_SPEC.md  PRD_NOVA_AI.md
migrations/: 001_create_conversation_history.sql  002_create_admin_tables.sql  003_create_credentials_table.sql
nova-dashboard/: Dockerfile  README.md  package-lock.json  package.json
src/: __init__.py  main.py
src/adapters/: dynamic_adapter.py
src/api/: __init__.py  admin_router.py  credentials_router.py  metrics_router.py  rag_router.py  router.py  test_router.py
src/buffer/: __init__.py  buffer_manager.py
src/config/: __init__.py  constants.py  prompts.py  settings.py
src/events/: __init__.py  connection_manager.py  emitter.py  metrics_collector.py  models.py
src/graph/: __init__.py  builder.py
src/integrations/: __init__.py  openai_client.py  outbound_webhook.py
src/memory/: __init__.py  conversation_memory.py  episodes_worker.py  persistent_memory.py  semantic_memory.py
src/models/: __init__.py  admin.py  inbound_webhook.py  response.py  state.py
src/nodes/: __init__.py  ai_agent.py  buffer.py  decorators.py  escalation.py  formatter.py  knowledge.py  multimodal.py  nlu.py  outbound_webhook.py  sender.py  tools.py  validation.py
src/processors/: __init__.py  audio.py  image.py  multimodal.py  text.py
src/rag/: embeddings.py  processor.py  vector_store.py  worker.py
src/scripts/: migrate_credentials.py  seed_admin_data.py
src/utils/: __init__.py  logger.py  redis_client.py  runtime_flags.py  text.py
tests/: __init__.py  test_api.py  test_buffer.py  test_escalation.py  test_knowledge.py  test_nlu.py  test_onboarding.py  test_rag_ingest.py  test_rag_search.py  test_semantic_memory.py  test_validation.py
(+35 files in other folders)
